--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,7 +13,10 @@
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.3.1",
     "react-scripts": "^4.0.1",
+    "react-scrollspy-nav": "^1.2.4",
+    "reactstrap-scrollspy": "^0.1.1",
     "web-vitals": "^0.2.4",
     "yarn": "^1.22.10"
   },
